[project]
name = "streamlit-app"
version = "0.3.12"
description = "Example to show off streamlit skillz"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "plotly>=6.6.0",
    "scipy>=1.17.1",
    "streamlit>=1.55.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
